--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,11 +1,35 @@
 .list {
+  $self: &;
   margin-bottom: 30px;
 
   li {
     display: flex;
+    position: relative;
     align-items: center;
     padding: 10px 12px;
+    transition: 0.4s ease-in-out;
     cursor: pointer;
+
+    span {
+      flex: 1;
+    }
+
+    &:hover #{$self}__remove-icon {
+      opacity: 0.3;
+    }
+
+    #{$self}__remove-icon {
+      opacity: 0;
+      transition: 0.4s ease-in-out;
+  
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.7);
+    }
 
     &.active {
       background-color: #fff;
@@ -18,24 +42,6 @@
       display: inline-flex;
       img {
         opacity: .6;
-      }
-    }
-    
-    .badge {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-
-      &--green {
-        background-color: #42b883;
-      }
-
-      &--blue {
-        background-color: #64c4ed;
-      }
-
-      &--pink {
-        background-color: #ffbbcc;
       }
     }
   }
