--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -10,8 +10,15 @@
     transition: 0.4s ease-in-out;
     cursor: pointer;
 
+    &+li {
+      margin-top: 5px;
+    }
+
     span {
       flex: 1;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     &:hover #{$self}__remove-icon {
