--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -26,8 +26,54 @@
     }
   }
 
+  &__form {
+
+    &-block {
+      .button {
+        margin-right: 10px;
+        margin-top: 15px;
+      }
+    }
+
+    &-new {
+      padding: 5px 0;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      opacity: .5;
+      transition: opacity .4s;
+
+      &:hover {
+        opacity: .8;
+      }
+
+      img {
+        width: 16px;
+        height: 16px;
+        margin-left: 2px;
+        margin-right: 17px;
+      }
+
+      span {
+        font-size: 16px;
+        line-height: 19px;
+      }
+    }
+  }
+
   &__items {
     margin-top: 30px;
+
+    h2 {
+      position: absolute;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 28px;
+      color: #c9d1d3;
+      left: 50%;
+      top: 50%;
+    }
 
     &-row {
       display: flex;
