--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -1,4 +1,12 @@
 .tasks {
+  a {
+    text-decoration: none;
+  }
+  
+  &:not(:last-of-type) {
+    margin-bottom: 40px;
+  }
+
   &__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
@@ -79,9 +87,45 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
+      position: relative;
       margin-bottom: 15px;
 
-      input {
+      &:hover &-actions {
+        opacity: 1;
+      }
+
+      &-actions {
+        display: flex;
+        opacity: 0;
+        transition: opacity 0.15s ease-in-out;
+
+        div {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 32px;
+          height: 32px;
+          background-color: lighten(#f4f6f8, 2%);
+          border-radius: 6px;
+          margin-left: 5px;
+          cursor: pointer;
+
+          &:hover {
+            background-color: darken(#f4f6f8, 2%);
+            svg {
+              opacity: 0.9;
+            }
+          }
+
+          svg {
+            width: 11px;
+            height: 11px;
+            opacity: 0.4;
+          }
+        }
+      }
+
+      p {
         border: 0;
         margin-left: 15px;
         font-size: 16px;
